# My-IZG

./: # Intelligent Zone Generator (IZG) – Web.md  .env.example  .gitignore  CHECKPOINT_2025-11-07.md  DATABASE_INTEGRATION_PLAN.md  DATABASE_STATUS.md  Dockerfile  Dummy_file.txt  Error log.txt  GITHUB_SUPABASE_SETUP.md  PUSH_TO_GITHUB.md  QUICK_TEST_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  TECH_SUMMARY_TEMPLATE.md  TESTING_GUIDE.md  check_env.py  docker-compose.yml  fix_ortools_setup.ps1  pyproject.toml  railway.toml  requirements.txt  sandbox_subset.csv  start_backend.sh  start_backend_windows.ps1  start_server.py  test_osrm_chunking.py  test_osrm_connection.py  test_railway_backend.ps1  test_railway_backend.py  universal_dev_tracker.md
.claude/: CLAUDE.md  infrastructure.md
.codex/: CODEX.md  infrastructure.md:Zone.Identifier
data/: dc_locations.xlsx  easyterritory_geojson_routes.JSON  filter_metadata.json
docs/: BACKEND_USAGE.md  BALANCING_PLAN.md  CI_CD_SETUP.md  CLUSTERING_IMPROVEMENTS.md  DATA_STORAGE.md  ENVIRONMENT_SETUP.md  INFRASTRUCTURE_ALIGNMENT.md  ROUTING_ARCHITECTURE.md  ROUTING_INTEGRATION_PLAN.md  STATUS_UPDATE.md
manual_testing/: manual_testing_README.md  phase6_manual_validation.md  sample_data_custom_columns.csv  sandbox_subset_balancing.csv  sandbox_subset_routing.csv  test_run_log.md
psd/: CUSTOMER_DATA_SCHEMA.md  DATA_CONSTRAINTS_AUDIT.md  DEPLOYMENT_GUIDE.md  PHASE_TRACKING.md  PHASE_TRACKING.md:Zone.Identifier  PRODUCT_SPECIFICATION.md  UI_SPECIFICATION.md
supabase/: schema.sql
tests/: test_balancing.py  (+5 more)
(+169 files in other folders)
