[tool.poetry]
name = "intelligent-zone-generator"
version = "0.1.0"
description = "Backend services for the Intelligent Zone Generator."
authors = ["Binder Logistics <dev-team@binder.example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
shapely = "^2.0.3"
httpx = "^0.27.0"
openpyxl = "^3.1.2"
ortools = "^9.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
